Istio-java-app-with-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongo
  name: mongo-service
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: mongo
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hr-core-app
spec:
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: hr-core-service
        version: v1
    spec:
      containers:
      - name: hr-core-service
        image: infomarcy/hr-client-app
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hr-core-service
  labels:
    app: hr-core-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
      targetPort: 8080       #nodePort: 31001
  selector:
    app: hr-core-service
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hr-account-app
spec:
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: hr-account-service
        version: v1
    spec:
      containers:
      - name: hr-account-service
        image: infomarcy/hr-accounts
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: hr-account-service
  labels:
    app: hr-account-service
spec:
  type: NodePort
  ports:
    - port: 9090
      name: http
      targetPort: 9090
      nodePort: 31002
  selector:
    app: hr-account-service
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: java-app-ingress
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hr-core-service
          servicePort: 8080
      - path: /create-accounts/.*
        backend:
          serviceName: hr-account-service
          servicePort: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: java-app-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: java-app-gateway-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - java-app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: hr-core-service
